interfaces/C/include/krylov.h

#ifndef KRYLOV_H
#define KRYLOV_H

#ifdef __cplusplus
extern "C" {
#endif

/* -------------------------------------------------------------------------
 * Automatically generated by scripts/generate_header.jl -- do not edit.
 * ------------------------------------------------------------------------- */

/* -------------------------------------------------------------------------
 * Enumerators
 * ------------------------------------------------------------------------- */

typedef enum {
  KRYLOV_FLOAT32   = 0,
  KRYLOV_FLOAT64   = 1,
  KRYLOV_COMPLEX32 = 2,
  KRYLOV_COMPLEX64 = 3,
} KrylovDataType;

typedef enum {
  KRYLOV_CPU = 0,
} KrylovDevice;

/* -------------------------------------------------------------------------
 * Callback types
 *
 * KrylovMatvec: computes y = A*x or y = M\x.
 *   x        : input vector  (read-only, length n)
 *   y        : output vector (write, length m)
 *   userdata : opaque pointer forwarded from krylov_solve
 * ------------------------------------------------------------------------- */

typedef void (*KrylovMatvec)(const void *x, void *y, void *userdata);

/* -------------------------------------------------------------------------
 * API functions
 * ------------------------------------------------------------------------- */

int krylov_workspace_create(const char* solver, int m, int n, int dtype, int device, void** ws_out);
int krylov_solve(void* ws, KrylovMatvec matvec_A, KrylovMatvec matvec_At, KrylovMatvec matvec_M, const void* b, void* userdata, double atol, double rtol, int itmax, int verbose);
int krylov_get_x(void* ws, void* x, int n);
int krylov_get_y(void* ws, void* y, int m);
int krylov_is_solved(void* ws);
int krylov_niter(void* ws);
double krylov_elapsed_time(void* ws);
int krylov_warm_start(void* ws, const void* x0, int n);
int krylov_workspace_free(void* ws);

#ifdef __cplusplus
}
#endif

#endif /* KRYLOV_H */